--- a/Interpreters/ManualInterpreter/ManualInterpreter.MonoGame.csproj
+++ b/Interpreters/ManualInterpreter/ManualInterpreter.MonoGame.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{66A03276-E5E7-4E05-9790-F5602147426C}</ProjectGuid>
+    <ProjectGuid>{A21CF025-AF25-4EC1-ADE2-13F4AEC58F7B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QuakeConsole</RootNamespace>
-    <AssemblyName>QuakeConsole.MonoGame</AssemblyName>
+    <AssemblyName>ManualInterpreter.MonoGame</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -17,7 +17,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;MONOGAME</DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -25,50 +25,24 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;MONOGAME</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MonoGame.Framework, Version=3.4.0.459, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MonoGame.Framework.WindowsDX.3.4.0.459\lib\net40\MonoGame.Framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Caret.cs" />
-    <Compile Include="ConsoleAction.cs" />
-    <Compile Include="ConsoleClearFlags.cs" />
-    <Compile Include="ConsoleComponent.cs" />
-    <Compile Include="ConsoleProcessResult.cs" />
-    <Compile Include="ConsoleSettings.cs" />
-    <Compile Include="Console.cs" />
-    <Compile Include="Console.Definitions.cs" />
-    <Compile Include="ConsoleState.cs" />
-    <Compile Include="ICaret.cs" />
-    <Compile Include="ICommandInterpreter.cs" />
-    <Compile Include="IInputBuffer.cs" />
-    <Compile Include="InputBuffer.cs" />
-    <Compile Include="IOutputBuffer.cs" />
-    <Compile Include="OutputBuffer.cs" />
-    <Compile Include="OutputBufferEntry.cs" />
+    <Compile Include="ManualInterpreter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SymbolPair.cs" />
-    <Compile Include="Utilities\BiDirectionalDictionary.cs" />
-    <Compile Include="Utilities\Check.cs" />
-    <Compile Include="Utilities\CircularArray.cs" />
-    <Compile Include="Utilities\Garbage.cs" />
-    <Compile Include="Utilities\InputManager.cs" />
-    <Compile Include="Utilities\Pool.cs" />
-    <Compile Include="Utilities\RectangleF.cs" />
-    <Compile Include="Utilities\StringExtensions.cs" />
-    <Compile Include="Utilities\Timer.cs" />
+    <Compile Include="Utilities\EnumerableExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <ProjectReference Include="..\..\Source\QuakeConsole.MonoGame.csproj">
+      <Project>{66A03276-E5E7-4E05-9790-F5602147426C}</Project>
+      <Name>QuakeConsole.MonoGame</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
