--- a/Interpreters/PythonInterpreter/PythonInterpreter.MonoGame.csproj
+++ b/Interpreters/PythonInterpreter/PythonInterpreter.MonoGame.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{009C278A-A225-47C2-AAF2-D6F7F8D1E70F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuakeConsole.Interpreters</RootNamespace>
-    <AssemblyName>PythonInterpreter</AssemblyName>
+    <RootNamespace>QuakeConsole</RootNamespace>
+    <AssemblyName>PythonInterpreter.MonoGame</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -76,7 +76,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PythonInterpreter.cs" />
     <Compile Include="TypeLoader.cs" />
-    <Compile Include="Utilities\Check.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
