--- a/Source/QuakeConsole.MonoGame.csproj
+++ b/Source/QuakeConsole.MonoGame.csproj
@@ -43,11 +43,11 @@
     <Compile Include="Console.cs" />
     <Compile Include="Console.Definitions.cs" />
     <Compile Include="ICommandInterpreter.cs" />
-    <Compile Include="IInputBuffer.cs" />
-    <Compile Include="InputBuffer.cs" />
-    <Compile Include="IOutputBuffer.cs" />
-    <Compile Include="OutputBuffer.cs" />
-    <Compile Include="OutputBufferEntry.cs" />
+    <Compile Include="IConsoleInput.cs" />
+    <Compile Include="ConsoleInput.cs" />
+    <Compile Include="IConsoleOutput.cs" />
+    <Compile Include="ConsoleOutput.cs" />
+    <Compile Include="OutputEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SymbolPair.cs" />
     <Compile Include="Utilities\BiDirectionalDictionary.cs" />
