--- a/Source/QuakeConsole.MonoGame.csproj
+++ b/Source/QuakeConsole.MonoGame.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>QuakeConsole.MonoGame</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+	<MonoGamePlatform>Windows</MonoGamePlatform>
+	<MonoGameContentBuilderExe></MonoGameContentBuilderExe>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,6 +40,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackgroundRenderer.cs" />
     <Compile Include="Caret.cs" />
     <Compile Include="ConsoleComponent.cs" />
     <Compile Include="Console.cs" />
@@ -62,9 +65,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="Content\background.fx" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
