Font -> bold; camera controller impl started

--- a/Samples/Sandbox.MonoGame/Sandbox.csproj
+++ b/Samples/Sandbox.MonoGame/Sandbox.csproj
@@ -42,6 +42,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CameraControllerComponent.cs" />
     <Compile Include="Cube.cs" />
     <Compile Include="SandboxGame.cs" />
     <Compile Include="Program.cs" />
