Autocomplete for indexers; additional symbols added

--- a/Interpreters/PythonInterpreter.Tests/PythonInterpreter.Tests.MonoGame.csproj
+++ b/Interpreters/PythonInterpreter.Tests/PythonInterpreter.Tests.MonoGame.csproj
@@ -39,7 +39,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutocompletionTests.cs" />
+    <Compile Include="ArrayAutocompletionTests.cs" />
+    <Compile Include="GeneralAutocompletionTests.cs" />
     <Compile Include="DummyObjects.cs" />
     <Compile Include="FakeInputBuffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
