Multiply texture color with background color for bg renderer

--- a/Samples/Sandbox.MonoGame/Sandbox.csproj
+++ b/Samples/Sandbox.MonoGame/Sandbox.csproj
@@ -89,7 +89,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\console.tga" />
+    <Content Include="Content\console.png" />
     <Content Include="Icon.ico" />
     <Content Include="Lib\abc.py">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
