--- a/Source/QuakeConsole.MonoGame.csproj
+++ b/Source/QuakeConsole.MonoGame.csproj
@@ -68,17 +68,17 @@
   <ItemGroup>
     <None Include="App.config" />
     <MonoGameContentReference Include="Content\Content.mgcb" />
-    <EmbeddedResource Include="Content\background.dx11.mgfxo" />
+    <EmbeddedResource Include="Content\Background.dx11.mgfxo" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <None Include="Content\background.fx" />
+    <None Include="Content\Background.fx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <PropertyGroup>
-    <PostBuildEvent>$(SolutionDir)Tools\2mgfx $(ProjectDir)Content\background.fx $(ProjectDir)Content\background.dx11.mgfxo /Profile:DirectX_11</PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)Tools\2mgfx $(ProjectDir)Content\Background.fx $(ProjectDir)Content\Background.dx11.mgfxo /Profile:DirectX_11</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
