--- a/Interpreters/PythonInterpreter.Tests/PythonInterpreter.Tests.MonoGame.csproj
+++ b/Interpreters/PythonInterpreter.Tests/PythonInterpreter.Tests.MonoGame.csproj
@@ -40,6 +40,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OverwriteInputAutocompletionTests.cs" />
     <Compile Include="AssignmentAutocompletionTests.cs" />
     <Compile Include="ArrayAutocompletionTests.cs" />
     <Compile Include="GeneralAutocompletionTests.cs" />
