--- a/Source/QuakeConsole.MonoGame.csproj
+++ b/Source/QuakeConsole.MonoGame.csproj
@@ -22,7 +22,7 @@
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\MonoGame\</OutputPath>
     <DocumentationFile>bin\Debug\MonoGame\QuakeConsole.MonoGame.xml</DocumentationFile>
-    <DefineConstants>TRACE;DEBUG;MONOGAME</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;MONOGAME; DIRECTX</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -85,7 +85,8 @@
   <ItemGroup>
     <None Include="App.config" />
     <MonoGameContentReference Include="Content\Content.mgcb" />
-    <EmbeddedResource Include="Content\Background.dx11.mgfxo" />
+    <EmbeddedResource Include="Content\Compiled\Background.dx11.mgfxo" />
+    <EmbeddedResource Include="Content\Compiled\Background.ogl.mgfxo" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
@@ -95,7 +96,8 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <PropertyGroup>
-    <PostBuildEvent>$(SolutionDir)Tools\2mgfx $(ProjectDir)Content\Background.fx $(ProjectDir)Content\Background.dx11.mgfxo /Profile:DirectX_11</PostBuildEvent>
+    <PostBuildEvent>$(SolutionDir)Tools\2mgfx $(ProjectDir)Content\Background.fx $(ProjectDir)Content\Compiled\Background.dx11.mgfxo /Profile:DirectX_11 /Defines:SM4
+$(SolutionDir)Tools\2mgfx $(ProjectDir)Content\Background.fx $(ProjectDir)Content\Compiled\Background.ogl.mgfxo /Profile:OpenGL</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
