--- a/Source/QuakeConsole.MonoGame.csproj
+++ b/Source/QuakeConsole.MonoGame.csproj
@@ -55,11 +55,14 @@
       <HintPath>..\packages\MonoGame.Framework.WindowsDX.3.4.0.459\lib\net40\MonoGame.Framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Features\CommandExecution.cs" />
+    <Compile Include="Features\CaseSensitivity.cs" />
     <Compile Include="Features\Deletion.cs" />
     <Compile Include="Features\Tabbing.cs" />
     <Compile Include="Features\Movement.cs" />
@@ -79,7 +82,7 @@
     <Compile Include="ConsoleOutput.cs" />
     <Compile Include="OutputEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SymbolPair.cs" />
+    <Compile Include="Symbol.cs" />
     <Compile Include="Utilities\BiDirectionalDictionary.cs" />
     <Compile Include="Utilities\Check.cs" />
     <Compile Include="Utilities\CircularArray.cs" />
