--- a/Samples/Sandbox.MonoGame/Sandbox.csproj
+++ b/Samples/Sandbox.MonoGame/Sandbox.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CameraControllerComponent.cs" />
     <Compile Include="Cube.cs" />
+    <Compile Include="Garbage.cs" />
     <Compile Include="SandboxGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
