--- a/Source/QuakeConsole.MonoGame.csproj
+++ b/Source/QuakeConsole.MonoGame.csproj
@@ -61,37 +61,38 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Features\CommandExecution.cs" />
-    <Compile Include="Features\CaseSensitivity.cs" />
-    <Compile Include="Features\Deletion.cs" />
-    <Compile Include="Features\MultiLineInput.cs" />
-    <Compile Include="Features\Selection.cs" />
-    <Compile Include="Features\Tabbing.cs" />
-    <Compile Include="Features\Movement.cs" />
-    <Compile Include="Features\CopyPasting.cs" />
+    <Compile Include="Input\Features\CommandExecution.cs" />
+    <Compile Include="Input\Features\CaseSensitivity.cs" />
+    <Compile Include="Input\Features\Deletion.cs" />
+    <Compile Include="Input\Features\MultiLineInput.cs" />
+    <Compile Include="Input\Features\Selection.cs" />
+    <Compile Include="Input\Features\Tabbing.cs" />
+    <Compile Include="Input\Features\Movement.cs" />
+    <Compile Include="Input\Features\CopyPasting.cs" />
+    <Compile Include="Input\InputEntry.cs" />
     <Compile Include="TexturedBackground.cs" />
-    <Compile Include="Caret.cs" />
+    <Compile Include="Input\Caret.cs" />
     <Compile Include="ConsoleComponent.cs" />
     <Compile Include="Console.cs" />
-    <Compile Include="Console.Definitions.cs" />
-    <Compile Include="Features\Autocompletion.cs" />
-    <Compile Include="Features\InputHistory.cs" />
-    <Compile Include="Features\RepeatingInput.cs" />
+    <Compile Include="Input\ConsoleInput.Definitions.cs" />
+    <Compile Include="Input\Features\Autocompletion.cs" />
+    <Compile Include="Input\Features\InputHistory.cs" />
+    <Compile Include="Input\Features\RepeatingInput.cs" />
     <Compile Include="ICommandInterpreter.cs" />
-    <Compile Include="IConsoleInput.cs" />
-    <Compile Include="ConsoleInput.cs" />
-    <Compile Include="IConsoleOutput.cs" />
-    <Compile Include="ConsoleOutput.cs" />
-    <Compile Include="OutputEntry.cs" />
+    <Compile Include="Input\IConsoleInput.cs" />
+    <Compile Include="Input\ConsoleInput.cs" />
+    <Compile Include="Output\IConsoleOutput.cs" />
+    <Compile Include="Output\ConsoleOutput.cs" />
+    <Compile Include="Output\OutputEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\Symbol.cs" />
+    <Compile Include="Input\Symbol.cs" />
     <Compile Include="Utilities\BiDirectionalDictionary.cs" />
-    <Compile Include="Utilities\ConsoleActionMap.cs" />
+    <Compile Include="Input\ConsoleActionMap.cs" />
     <Compile Include="Utilities\Int3.cs" />
     <Compile Include="Utilities\SpriteFontStringBuilder.cs" />
     <Compile Include="Utilities\Check.cs" />
     <Compile Include="Utilities\CircularArray.cs" />
-    <Compile Include="Utilities\InputManager.cs" />
+    <Compile Include="Utilities\InputState.cs" />
     <Compile Include="Utilities\Pool.cs" />
     <Compile Include="Utilities\RectangleF.cs" />
     <Compile Include="Utilities\StringExtensions.cs" />
