--- a/Source/QuakeConsole.MonoGame.csproj
+++ b/Source/QuakeConsole.MonoGame.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="BackgroundRenderer.cs" />
     <Compile Include="Caret.cs" />
+    <Compile Include="ConsoleActionMap.cs" />
     <Compile Include="ConsoleComponent.cs" />
     <Compile Include="Console.cs" />
     <Compile Include="Console.Definitions.cs" />
@@ -71,12 +72,13 @@
     <Compile Include="ConsoleOutput.cs" />
     <Compile Include="OutputEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SymbolPair.cs" />
+    <Compile Include="Symbol.cs" />
     <Compile Include="Utilities\BiDirectionalDictionary.cs" />
     <Compile Include="Utilities\Check.cs" />
     <Compile Include="Utilities\CircularArray.cs" />
     <Compile Include="Utilities\Garbage.cs" />
-    <Compile Include="Utilities\InputManager.cs" />
+    <Compile Include="Utilities\InputState.cs" />
+    <Compile Include="Utilities\Int3.cs" />
     <Compile Include="Utilities\Pool.cs" />
     <Compile Include="Utilities\RectangleF.cs" />
     <Compile Include="Utilities\StringExtensions.cs" />
