--- a/Samples/Sandbox.MonoGame/Sandbox.csproj
+++ b/Samples/Sandbox.MonoGame/Sandbox.csproj
@@ -14,7 +14,7 @@
     <MonoGamePlatform>Windows</MonoGamePlatform>
     <MonoGameContentBuilderExe>
     </MonoGameContentBuilderExe>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -1003,6 +1003,10 @@
     <ProjectReference Include="..\..\Interpreters\PythonInterpreter\PythonInterpreter.MonoGame.csproj">
       <Project>{009c278a-a225-47c2-aaf2-d6f7f8d1e70f}</Project>
       <Name>PythonInterpreter.MonoGame</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Interpreters\RoslynInterpreter\RoslynInterpreter.MonoGame.csproj">
+      <Project>{6f52cae9-64b6-4601-b8e7-2ddde96c2031}</Project>
+      <Name>RoslynInterpreter.MonoGame</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Source\QuakeConsole.MonoGame.csproj">
       <Project>{66a03276-e5e7-4e05-9790-f5602147426c}</Project>
