--- a/Samples/Sandbox.MonoGame/packages.config
+++ b/Samples/Sandbox.MonoGame/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IronPython" version="2.7.5" targetFramework="net4" />
+  <package id="IronPython" version="2.7.5" targetFramework="net4" requireReinstallation="true" />
   <package id="IronPython.StdLib" version="2.7.5" targetFramework="net4" />
   <package id="MonoGame.Framework.WindowsDX" version="3.4.0.459" targetFramework="net4" />
 </packages>
