--- a/Interpreters/RoslynInterpreter/packages.config
+++ b/Interpreters/RoslynInterpreter/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.1.0-rc1-20151109-01" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.0-rc1-20151109-01" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="1.1.0-rc1-20151109-01" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Scripting" version="1.1.0-rc1-20151109-01" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="1.1.0-rc1-20151109-01" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Scripting" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="1.1.0" targetFramework="net46" />
   <package id="System.AppContext" version="4.0.0" targetFramework="net46" />
   <package id="System.Collections" version="4.0.10" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net46" />
@@ -27,8 +27,8 @@
   <package id="System.Runtime.Extensions" version="4.0.10" targetFramework="net46" />
   <package id="System.Runtime.Handles" version="4.0.0" targetFramework="net46" />
   <package id="System.Runtime.InteropServices" version="4.0.20" targetFramework="net46" />
-  <package id="System.Text.Encoding" version="4.0.0" targetFramework="net46" />
-  <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net46" />
+  <package id="System.Text.Encoding" version="4.0.10" targetFramework="net46" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.10" targetFramework="net46" />
   <package id="System.Threading" version="4.0.10" targetFramework="net46" />
   <package id="System.Threading.Tasks" version="4.0.10" targetFramework="net46" />
 </packages>
