--- a/Interpreters/PythonInterpreter/PythonInterpreter.MonoGame.csproj
+++ b/Interpreters/PythonInterpreter/PythonInterpreter.MonoGame.csproj
@@ -83,14 +83,12 @@
   <ItemGroup>
     <Compile Include="Autocompleter.cs" />
     <Compile Include="AutocompletionContext.cs" />
-    <Compile Include="AutocompletionType.cs" />
     <Compile Include="Member.cs" />
-    <Compile Include="MemberCollection.cs" />
     <Compile Include="OutputBufferWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PythonInterpreter.cs" />
     <Compile Include="TypeLoader.cs" />
-    <Compile Include="Utilities\Utilities.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
