--- a/Samples/Common/Common.csproj
+++ b/Samples/Common/Common.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E01F1552-3064-4583-A2CE-2A5DD00770B3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Common</RootNamespace>
+    <RootNamespace>QuakeConsole.Samples.Common</RootNamespace>
     <AssemblyName>Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
