--- a/Interpreters/ManualInterpreter/MonoGame.QuakeConsole.ManualInterpreter.csproj
+++ b/Interpreters/ManualInterpreter/MonoGame.QuakeConsole.ManualInterpreter.csproj
@@ -4,75 +4,53 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C56127DB-8995-48E4-A417-FC656B1BC6BF}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <ProjectGuid>{A21CF025-AF25-4EC1-ADE2-13F4AEC58F7B}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuakeConsole.Samples.HelloPython</RootNamespace>
-    <AssemblyName>HelloPython</AssemblyName>
+    <RootNamespace>QuakeConsole</RootNamespace>
+    <AssemblyName>MonoGame.QuakeConsole.ManualInterpreter</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <MonoGamePlatform>Windows</MonoGamePlatform>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\Debug\MonoGame\</OutputPath>
+    <DocumentationFile>bin\Debug\MonoGame\MonoGame.QuakeConsole.ManualInterpreter.xml</DocumentationFile>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\Release\MonoGame\</OutputPath>
+    <DocumentationFile>bin\Release\MonoGame\MonoGame.QuakeConsole.ManualInterpreter.xml</DocumentationFile>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MonoGame.Framework, Version=3.5.0.1678, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\MonoGame.Framework.WindowsDX.3.5.0.1678\lib\net40\MonoGame.Framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InstructionsComponent.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="ManualInterpreter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="HelloPythonGame.cs" />
+    <Compile Include="Utilities\EnumerableExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <MonoGameContentReference Include="Content\Content.mgcb" />
-    <None Include="Content\instructions.spritefont" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Interpreters\PythonInterpreter\MonoGame.QuakeConsole.PythonInterpreter.csproj">
-      <Project>{009c278a-a225-47c2-aaf2-d6f7f8d1e70f}</Project>
-      <Name>MonoGame.QuakeConsole.PythonInterpreter</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.csproj">
-      <Project>{66a03276-e5e7-4e05-9790-f5602147426c}</Project>
+      <Project>{66A03276-E5E7-4E05-9790-F5602147426C}</Project>
       <Name>MonoGame.QuakeConsole</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{e01f1552-3064-4583-a2ce-2a5dd00770b3}</Project>
-      <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
