--- a/Interpreters/PythonInterpreter.Tests/MonoGame.QuakeConsole.PythonInterpreter.Tests.csproj
+++ b/Interpreters/PythonInterpreter.Tests/MonoGame.QuakeConsole.PythonInterpreter.Tests.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C56127DB-8995-48E4-A417-FC656B1BC6BF}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <ProjectGuid>{76B26717-E016-4C24-AA10-7CD8706DAAA6}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuakeConsole.Samples.HelloPython</RootNamespace>
-    <AssemblyName>HelloPython</AssemblyName>
+    <RootNamespace>QuakeConsole.Tests</RootNamespace>
+    <AssemblyName>MonoGame.QuakeConsole.PythonInterpreter.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <MonoGamePlatform>Windows</MonoGamePlatform>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,22 +21,20 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MonoGame.Framework, Version=3.5.0.1678, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\MonoGame.Framework.WindowsDX.3.5.0.1678\lib\net40\MonoGame.Framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -45,33 +42,34 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InstructionsComponent.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="AccessorAutocompletionTests.cs" />
+    <Compile Include="MethodAutocompletionTests.cs" />
+    <Compile Include="Utilities\TestsBase.cs" />
+    <Compile Include="OverwriteInputAutocompletionTests.cs" />
+    <Compile Include="AssignmentAutocompletionTests.cs" />
+    <Compile Include="ArrayAutocompletionTests.cs" />
+    <Compile Include="GeneralAutocompletionTests.cs" />
+    <Compile Include="Utilities\DummyObjects.cs" />
+    <Compile Include="Utilities\FakeInputBuffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="HelloPythonGame.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <MonoGameContentReference Include="Content\Content.mgcb" />
-    <None Include="Content\instructions.spritefont" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Interpreters\PythonInterpreter\MonoGame.QuakeConsole.PythonInterpreter.csproj">
+    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.csproj">
+      <Project>{66A03276-E5E7-4E05-9790-F5602147426C}</Project>
+      <Name>MonoGame.QuakeConsole</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PythonInterpreter\MonoGame.QuakeConsole.PythonInterpreter.csproj">
       <Project>{009c278a-a225-47c2-aaf2-d6f7f8d1e70f}</Project>
       <Name>MonoGame.QuakeConsole.PythonInterpreter</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.csproj">
-      <Project>{66a03276-e5e7-4e05-9790-f5602147426c}</Project>
-      <Name>MonoGame.QuakeConsole</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{e01f1552-3064-4583-a2ce-2a5dd00770b3}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
