--- a/Interpreters/PythonInterpreter/MonoGame.QuakeConsole.PythonInterpreter.csproj
+++ b/Interpreters/PythonInterpreter/MonoGame.QuakeConsole.PythonInterpreter.csproj
@@ -87,7 +87,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.csproj">
+    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.WindowsDX.csproj">
       <Project>{66a03276-e5e7-4e05-9790-f5602147426c}</Project>
       <Name>MonoGame.QuakeConsole</Name>
     </ProjectReference>
