--- a/Interpreters/RoslynInterpreter/MonoGame.QuakeConsole.RoslynInterpreter.csproj
+++ b/Interpreters/RoslynInterpreter/MonoGame.QuakeConsole.RoslynInterpreter.csproj
@@ -92,7 +92,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.csproj">
+    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.WindowsDX.csproj">
       <Project>{66a03276-e5e7-4e05-9790-f5602147426c}</Project>
       <Name>MonoGame.QuakeConsole</Name>
     </ProjectReference>
