--- a/Samples/Sandbox/Sandbox.csproj
+++ b/Samples/Sandbox/Sandbox.csproj
@@ -1006,7 +1006,7 @@
       <Project>{6f52cae9-64b6-4601-b8e7-2ddde96c2031}</Project>
       <Name>MonoGame.QuakeConsole.RoslynInterpreter</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.csproj">
+    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.WindowsDX.csproj">
       <Project>{66a03276-e5e7-4e05-9790-f5602147426c}</Project>
       <Name>MonoGame.QuakeConsole</Name>
     </ProjectReference>
