--- a/Source/MonoGame.QuakeConsole.WindowsDX.csproj
+++ b/Source/MonoGame.QuakeConsole.WindowsDX.csproj
@@ -22,7 +22,7 @@
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\MonoGame.WindowsDX\</OutputPath>
     <DocumentationFile>bin\Debug\MonoGame.WindowsDX\MonoGame.QuakeConsole.xml</DocumentationFile>
-    <DefineConstants>TRACE;DEBUG;MONOGAME;WINDOWSDX</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;WINDOWSDX</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -32,7 +32,7 @@
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\MonoGame.WindowsDX\</OutputPath>
     <DocumentationFile>bin\Release\MonoGame.WindowsDX\QuakeConsole.MonoGame.xml</DocumentationFile>
-    <DefineConstants>TRACE;MONOGAME;WINDOWSDX</DefineConstants>
+    <DefineConstants>TRACE;WINDOWSDX</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
