--- a/Samples/HelloPython/HelloPython.WindowsDX.csproj
+++ b/Samples/HelloPython/HelloPython.WindowsDX.csproj
@@ -4,30 +4,36 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E01F1552-3064-4583-A2CE-2A5DD00770B3}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{C56127DB-8995-48E4-A417-FC656B1BC6BF}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuakeConsole.Samples.Common</RootNamespace>
-    <AssemblyName>Common</AssemblyName>
+    <RootNamespace>QuakeConsole.Samples.HelloPython</RootNamespace>
+    <AssemblyName>HelloPython</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <MonoGamePlatform>Windows</MonoGamePlatform>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\Debug\WindowsDX\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\Release\WindowsDX\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework, Version=3.5.1.1679, Culture=neutral, processorArchitecture=MSIL">
@@ -36,16 +42,33 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CameraControllerComponent.cs" />
     <Compile Include="CubeComponent.cs" />
+    <Compile Include="InstructionsComponent.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="HelloPythonGame.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <MonoGameContentReference Include="Content\Content.WindowsDX.mgcb" />
+    <None Include="Content\instructions.spritefont" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Interpreters\PythonInterpreter\MonoGame.QuakeConsole.PythonInterpreter.WindowsDX.csproj">
+      <Project>{009c278a-a225-47c2-aaf2-d6f7f8d1e70f}</Project>
+      <Name>MonoGame.QuakeConsole.PythonInterpreter</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.WindowsDX.csproj">
+      <Project>{66a03276-e5e7-4e05-9790-f5602147426c}</Project>
+      <Name>MonoGame.QuakeConsole</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
