--- a/Samples/Sandbox/Sandbox.csproj
+++ b/Samples/Sandbox/Sandbox.csproj
@@ -42,6 +42,8 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CameraControllerComponent.cs" />
+    <Compile Include="CubeComponent.cs" />
     <Compile Include="Garbage.cs" />
     <Compile Include="SandboxGame.cs" />
     <Compile Include="Program.cs" />
@@ -998,7 +1000,7 @@
       <Project>{a21cf025-af25-4ec1-ade2-13f4aec58f7b}</Project>
       <Name>MonoGame.QuakeConsole.ManualInterpreter</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Interpreters\PythonInterpreter\MonoGame.QuakeConsole.PythonInterpreter.csproj">
+    <ProjectReference Include="..\..\Interpreters\PythonInterpreter\MonoGame.QuakeConsole.PythonInterpreter.WindowsDX.csproj">
       <Project>{009c278a-a225-47c2-aaf2-d6f7f8d1e70f}</Project>
       <Name>MonoGame.QuakeConsole.PythonInterpreter</Name>
     </ProjectReference>
@@ -1009,10 +1011,6 @@
     <ProjectReference Include="..\..\Source\MonoGame.QuakeConsole.WindowsDX.csproj">
       <Project>{66a03276-e5e7-4e05-9790-f5602147426c}</Project>
       <Name>MonoGame.QuakeConsole</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{e01f1552-3064-4583-a2ce-2a5dd00770b3}</Project>
-      <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
